2007-08-26  Badlop  <badlop@ono.com>

	* src/mod_webpresence.erl: Improved table format and conversion from old mod_presence. Small fixes. Replace nested cases with call to funcions.

	* src/mod_webpresence.erl: Renamed mod_presence.erl to mod_webpresence.erl. Updated table format. XForm support for Hash and JID URLs. Added complete support for 'jid' and 'hash' URIs.
	* README.txt: Document 'jid' and 'hash' type of URIs.

	* Emakefile: Idem.
	* README.txt: Idem.

	* src/mod_presence.erl: Preliminary support for hashed JIDs. Added support for HOST keyword, and removed unusued Access variables. Added basic page to Web Admin.

2007-08-25  Badlop  <badlop@ono.com>

	* src/mod_presence.erl: Fixed compilation warnings. Fixed two warnings reported by Dialyzer. Renamed Status and Text to Show and Status. Table index key only needs User and Server. Added id table field and update_table function. XML option is stored as atom instead of string. Cleaned process/2 and show_presence/1. New home page, and icon themes quickview.

2007-08-05  Badlop  <badlop@ono.com>

	* ChangeLog: New file to track changes.

	* src/mod_presence.erl: Fix indentation.

	* src/Makefile.in: Removed unusued file.